Added short info for trips and refactor trip_stops
